// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
.c3 {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c3.gradient--overlay:after {
  z-index: 2;
  height: 100%;
  content: "";
  opacity: 0.4;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c5 {
  margin: 0 auto;
  max-width: 1248px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c7 .row {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
}

.c1 {
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c4 {
  padding-top: 60px;
  z-index: 2;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c8 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:481px) {
  .c3 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:769px) {
  .c3 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:481px) {
  .c3.gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:769px) {
  .c3.gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:481px) {
  .c5 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:481px) {
  .c7 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c9 {
    padding-top: 60px;
  }
}

@media screen and (min-width:481px) {
  .c8 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c8 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c8 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  className="c0"
>
  <span
    aria-hidden={true}
    className="c1 c2 c3"
    from="#026cdf"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
    to="#3ac7ff"
  />
  <div
    className="c4 c5"
  >
    <div
      className="c6 row c7"
    >
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
.c2 {
  z-index: 1;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay:after {
  z-index: 2;
  height: 100%;
  content: "";
  opacity: 0.4;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c4 {
  margin: 0 auto;
  max-width: 1248px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 .row {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c7 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:481px) {
  .c2 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:769px) {
  .c2 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:481px) {
  .c2.gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:769px) {
  .c2.gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:481px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:481px) {
  .c6 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:481px) {
  .c8 {
    padding-top: 60px;
  }
}

@media screen and (min-width:481px) {
  .c7 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:769px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1025px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  className="c0"
>
  <span
    className="c1 c2"
    from="#026cdf"
    to="#3ac7ff"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 row c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
